Rename indexing functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,11 @@ export(assessment_inventory)
 export(assessment_list_glance)
 export(download_assessment)
 export(download_assessment_list)
-export(download_fqa_assessments)
-export(download_fqa_databases)
-export(download_fqa_transects)
 export(download_transect)
 export(download_transect_list)
+export(index_fqa_assessments)
+export(index_fqa_databases)
+export(index_fqa_transects)
 export(transect_glance)
 export(transect_inventory)
 export(transect_list_glance)
