Add httr functionality for graceful failure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(transect_inventory)
 export(transect_list_glance)
 export(transect_phys)
 import(dplyr)
+import(httr)
 import(jsonlite)
 import(tidyr)
 import(utils)
