--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ Authors@R: c(
   person("Myers", "Alexia", , email = "myersaj@lakeforest.edu", role = c("aut")),
   person("Gard", "Andrew", ,email = "agard@lakeforest.edu", role = c("aut", "cre"))
   )
-Description: Tools for downloading and analyzing floristic quality assessment data.
+Description: Tools for downloading and analyzing floristic quality assessment data. 
+  See Freyman et. al (2015) <doi:10.1111/2041-210X.12491> for more information 
+  about floristic quality assessment and the FQA database.  
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
