Add database functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,11 @@
 export(assessment_glance)
 export(assessment_inventory)
 export(assessment_list_glance)
+export(database_glance)
+export(database_inventory)
 export(download_assessment)
 export(download_assessment_list)
+export(download_database)
 export(download_transect)
 export(download_transect_list)
 export(index_fqa_assessments)
