Add species_* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,16 +16,26 @@ export(download_transect_list)
 export(index_fqa_assessments)
 export(index_fqa_databases)
 export(index_fqa_transects)
+export(species_acronym)
+export(species_c)
+export(species_common_name)
+export(species_nativity)
+export(species_phys)
 export(species_profile)
+export(species_profile_plot)
+export(species_w)
 export(transect_glance)
 export(transect_inventory)
 export(transect_list_glance)
 export(transect_phys)
 export(transect_subplot_inventories)
 import(dplyr)
+import(ggplot2)
 import(httr)
 import(jsonlite)
 import(tidyr)
 import(utils)
+importFrom(memoise,has_cache)
+importFrom(memoise,memoise)
 importFrom(rlang,.data)
 importFrom(stats,sd)
