--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,14 @@ Language: en_US
 LazyData: true
 Imports: 
     dplyr,
+    ggplot2,
     httr,
     jsonlite,
+    memoise,
     rlang,
     tidyr
 RoxygenNote: 7.2.1
 Suggests: 
-    ggplot2,
     knitr,
     rmarkdown,
     testthat
