use importFrom for ggplot2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,11 +30,17 @@ export(transect_list_glance)
 export(transect_phys)
 export(transect_subplot_inventories)
 import(dplyr)
-import(ggplot2)
 import(httr)
 import(jsonlite)
 import(tidyr)
 import(utils)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_col)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,theme_minimal)
 importFrom(memoise,has_cache)
 importFrom(memoise,memoise)
 importFrom(rlang,.data)
