--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,9 +26,10 @@ RoxygenNote: 7.2.3
 Suggests: 
     knitr,
     rmarkdown,
-    testthat
+    testthat (>= 3.0.0)
 Depends: 
     R (>= 4.1.0)
 VignetteBuilder: knitr
 URL: https://github.com/equitable-equations/fqar/
 BugReports: https://github.com/equitable-equations/fqar/issues
+Config/testthat/edition: 3
