Add documentation for transect_list_inventory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(species_w)
 export(transect_glance)
 export(transect_inventory)
 export(transect_list_glance)
+export(transect_list_inventory)
 export(transect_phys)
 export(transect_subplot_inventories)
 import(dplyr)
