--- a/.github/workflows/.draft-pdf.yml
+++ b/.github/workflows/.draft-pdf.yml
@@ -6,7 +6,7 @@ jobs:
     name: Paper Draft
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Build draft PDF
         uses: openjournals/openjournals-draft-action@master
         with:
@@ -16,8 +16,8 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v1
         with:
-          name: paper.pdf
+          name: paper
           # This is the output path where Pandoc will write the compiled
           # PDF. Note, this should be the same directory as the input
           # paper.md
-          path: paper
+          path: paper.pdf
