--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,theme_minimal)
+importFrom(memoise,drop_cache)
 importFrom(memoise,has_cache)
 importFrom(memoise,memoise)
 importFrom(rlang,.data)
