--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,theme_minimal)
 importFrom(memoise,drop_cache)
+importFrom(memoise,forget)
 importFrom(memoise,has_cache)
 importFrom(memoise,memoise)
 importFrom(rlang,.data)
