align graceful failure with memoisation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,4 +47,5 @@ importFrom(memoise,forget)
 importFrom(memoise,has_cache)
 importFrom(memoise,memoise)
 importFrom(rlang,.data)
+importFrom(rlang,is_interactive)
 importFrom(stats,sd)
