--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: Tools for downloading and analyzing floristic quality assessment da
   about floristic quality assessment and the associated database.  
 License: MIT + file LICENSE
 Encoding: UTF-8
-Language: en_US
+Language: en-US
 LazyData: true
 Imports: 
     dplyr,
